fix: align card titles at different screens

--- a/src/widget/HiringProcess/HiringProcess.module.css
+++ b/src/widget/HiringProcess/HiringProcess.module.css
@@ -52,7 +52,7 @@
 @media screen and (min-width: 1200px) {
   .section {
     --gap-section: 64px;
-    --gap-cards: 80px;
+    --gap-cards: 40px;
   }
 
   .container {
@@ -62,5 +62,11 @@
   .inner {
     grid-template-rows: 1fr;
     grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .section {
+    --gap-cards: 80px;
   }
 }
